// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./__tests__/giji/comment.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"-28 22 1136 224\\" style=\\"max-width: 100%; width: 1136px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"100\\" height=\\"168\\" x=\\"0\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"140\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"280\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"420\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"548\\" height=\\"196\\" x=\\"-14\\" y=\\"36\\" rx=\\"3\\" ry=\\"3\\" class=\\"cluster\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"560\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"700\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"840\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"980\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"548\\" height=\\"196\\" x=\\"546\\" y=\\"36\\" rx=\\"3\\" ry=\\"3\\" class=\\"cluster\\">
</rect>
<image href=\\"aaa\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"5\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"bbb\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"145\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ccc\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"285\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ddd\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"425\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"eee\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"565\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"fff\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"705\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ggg\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"845\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"hhh\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"985\\" y=\\"55\\" class=\\"icon\\">
</image>
</g>
<g class=\\"edgePath\\">
<path fill=\\"none\\" d=\\"M534,134C584,134,496,134,546,134\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M534,134C584,134,-50,134,0,134\\" marker-start=\\"url(#svg-marker-circle)\\" marker-end=\\"url(#svg-marker-circle)\\" class=\\"path solid\\">
</path>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<text text-anchor=\\"middle\\" label=\\"aaa\\" x=\\"50\\" y=\\"208\\" class=\\"pen\\">aaa</text>
<text text-anchor=\\"middle\\" label=\\"bbb\\" x=\\"190\\" y=\\"208\\" class=\\"pen\\">bbb</text>
<text text-anchor=\\"middle\\" label=\\"ccc\\" x=\\"330\\" y=\\"208\\" class=\\"pen\\">ccc</text>
<text text-anchor=\\"middle\\" label=\\"ddd\\" x=\\"470\\" y=\\"208\\" class=\\"pen\\">ddd</text>
<text text-anchor=\\"end\\" label=\\"first\\" x=\\"534\\" y=\\"50\\" class=\\"pen\\">first</text>
<text text-anchor=\\"middle\\" label=\\"eee\\" x=\\"610\\" y=\\"208\\" class=\\"pen\\">eee</text>
<text text-anchor=\\"middle\\" label=\\"fff\\" x=\\"750\\" y=\\"208\\" class=\\"pen\\">fff</text>
<text text-anchor=\\"middle\\" label=\\"ggg\\" x=\\"890\\" y=\\"208\\" class=\\"pen\\">ggg</text>
<text text-anchor=\\"middle\\" label=\\"hhh\\" x=\\"1030\\" y=\\"208\\" class=\\"pen\\">hhh</text>
<text text-anchor=\\"end\\" label=\\"second\\" x=\\"1094\\" y=\\"50\\" class=\\"pen\\">second</text>
<text text-anchor=\\"middle\\" label=\\"main relation\\" x=\\"540\\" y=\\"134\\" class=\\"pen\\">main relation</text>
<text text-anchor=\\"middle\\" label=\\"sub relation\\" x=\\"267\\" y=\\"134\\" class=\\"pen\\">sub relation</text>
</g>
<!---->
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/japanease.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"72 22 596 374\\" style=\\"max-width: 100%; width: 596px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"100\\" height=\\"168\\" x=\\"100\\" y=\\"100\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"200\\" y=\\"100\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"140\\" height=\\"128\\" x=\\"300\\" y=\\"100\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"140\\" height=\\"128\\" x=\\"400\\" y=\\"100\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"200\\" y=\\"200\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"540\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"568\\" height=\\"346\\" x=\\"86\\" y=\\"36\\" rx=\\"3\\" ry=\\"3\\" class=\\"cluster\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"100\\" y=\\"200\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"100\\" y=\\"200\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"300\\" y=\\"200\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"328\\" height=\\"196\\" x=\\"86\\" y=\\"186\\" rx=\\"3\\" ry=\\"3\\" class=\\"cluster\\">
</rect>
<image href=\\"参休\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"105\\" y=\\"105\\" class=\\"icon\\">
</image>
<image href=\\"ミツボシ\\" transform=\\"rotate(180, 250, 170)\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"205\\" y=\\"105\\" class=\\"icon\\">
</image>
<image href=\\"ネイサン\\" transform=\\"rotate(90, 370, 170)\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"305\\" y=\\"105\\" class=\\"icon\\">
</image>
<image href=\\"サイラス\\" transform=\\"rotate(270, 450, 150)\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"405\\" y=\\"105\\" class=\\"icon\\">
</image>
<image href=\\"はのん\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"205\\" y=\\"205\\" class=\\"icon\\">
</image>
<image href=\\"ペラジー\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"545\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"皇帝\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"105\\" y=\\"205\\" class=\\"icon\\">
</image>
<image href=\\"はおう\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"105\\" y=\\"205\\" class=\\"icon\\">
</image>
<image href=\\"かみさま\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"305\\" y=\\"205\\" class=\\"icon\\">
</image>
</g>
<g class=\\"edgePath\\">
<path fill=\\"none\\" d=\\"M370,382C370,432,36,284,86,284\\" marker-start=\\"url(#svg-marker-cross)\\" marker-end=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M300,284C350,284,50,184,100,184\\" class=\\"path dotted\\">
</path>
<path fill=\\"none\\" d=\\"M200,184C250,184,150,184,200,184\\" class=\\"path dotted\\">
</path>
<path fill=\\"none\\" d=\\"M440,164C490,164,50,284,100,284\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M200,284C250,284,50,284,100,284\\" marker-start=\\"url(#svg-marker-cross)\\" marker-end=\\"url(#svg-marker-cross)\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M540,164C590,164,50,284,100,284\\" marker-end=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M640,134C690,134,250,284,300,284\\" marker-end=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M400,284C450,284,50,284,100,284\\" marker-start=\\"url(#svg-marker-arrow-start)\\" marker-end=\\"url(#svg-marker-arrow-end)\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M400,284C450,284,50,184,100,184\\" marker-start=\\"url(#svg-marker-circle)\\" marker-end=\\"url(#svg-marker-circle)\\" class=\\"path wide\\">
</path>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<text text-anchor=\\"middle\\" label=\\"参休\\" x=\\"150\\" y=\\"258\\" class=\\"pen\\">参休</text>
<text text-anchor=\\"middle\\" label=\\"ミツボシ\\" x=\\"250\\" y=\\"258\\" class=\\"pen\\">ミツボシ</text>
<text text-anchor=\\"middle\\" label=\\"ネイサン\\" x=\\"370\\" y=\\"218\\" class=\\"pen\\">ネイサン</text>
<text text-anchor=\\"middle\\" label=\\"サイラス\\" x=\\"470\\" y=\\"218\\" class=\\"pen\\">サイラス</text>
<text text-anchor=\\"middle\\" label=\\"はのん\\" x=\\"250\\" y=\\"358\\" class=\\"pen\\">はのん</text>
<text text-anchor=\\"middle\\" label=\\"ペラジー\\" x=\\"590\\" y=\\"208\\" class=\\"pen\\">ペラジー</text>
<text text-anchor=\\"end\\" label=\\"ほのぼのぐみ\\" x=\\"654\\" y=\\"50\\" class=\\"pen\\">ほのぼのぐみ</text>
<text text-anchor=\\"middle\\" label=\\"皇帝\\" x=\\"150\\" y=\\"358\\" class=\\"pen\\">皇帝</text>
<text text-anchor=\\"middle\\" label=\\"はおう\\" x=\\"150\\" y=\\"358\\" class=\\"pen\\">はおう</text>
<text text-anchor=\\"middle\\" label=\\"かみさま\\" x=\\"350\\" y=\\"358\\" class=\\"pen\\">かみさま</text>
<text text-anchor=\\"end\\" label=\\"がちがちぐみ\\" x=\\"414\\" y=\\"200\\" class=\\"pen\\">がちがちぐみ</text>
</g>
<!---->
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/node_only.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"-14 36 1108 196\\" style=\\"max-width: 100%; width: 1108px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"100\\" height=\\"168\\" x=\\"0\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"140\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"280\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"420\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"560\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"700\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"840\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"980\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<image href=\\"aaa\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"5\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"bbb\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"145\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ccc\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"285\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ddd\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"425\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"eee\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"565\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"fff\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"705\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ggg\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"845\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"hhh\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"985\\" y=\\"55\\" class=\\"icon\\">
</image>
</g>
<g class=\\"edgePath\\">
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<text text-anchor=\\"middle\\" label=\\"aaa\\" x=\\"50\\" y=\\"208\\" class=\\"pen\\">aaa</text>
<text text-anchor=\\"middle\\" label=\\"bbb\\" x=\\"190\\" y=\\"208\\" class=\\"pen\\">bbb</text>
<text text-anchor=\\"middle\\" label=\\"ccc\\" x=\\"330\\" y=\\"208\\" class=\\"pen\\">ccc</text>
<text text-anchor=\\"middle\\" label=\\"ddd\\" x=\\"470\\" y=\\"208\\" class=\\"pen\\">ddd</text>
<text text-anchor=\\"middle\\" label=\\"eee\\" x=\\"610\\" y=\\"208\\" class=\\"pen\\">eee</text>
<text text-anchor=\\"middle\\" label=\\"fff\\" x=\\"750\\" y=\\"208\\" class=\\"pen\\">fff</text>
<text text-anchor=\\"middle\\" label=\\"ggg\\" x=\\"890\\" y=\\"208\\" class=\\"pen\\">ggg</text>
<text text-anchor=\\"middle\\" label=\\"hhh\\" x=\\"1030\\" y=\\"208\\" class=\\"pen\\">hhh</text>
</g>
<!---->
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/relation.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"-28 22 1136 224\\" style=\\"max-width: 100%; width: 1136px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"100\\" height=\\"168\\" x=\\"0\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"140\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"280\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"420\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"548\\" height=\\"196\\" x=\\"-14\\" y=\\"36\\" rx=\\"3\\" ry=\\"3\\" class=\\"cluster\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"560\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"700\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"840\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect width=\\"100\\" height=\\"168\\" x=\\"980\\" y=\\"50\\" rx=\\"3\\" ry=\\"3\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"548\\" height=\\"196\\" x=\\"546\\" y=\\"36\\" rx=\\"3\\" ry=\\"3\\" class=\\"cluster\\">
</rect>
<image href=\\"aaa\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"5\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"bbb\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"145\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ccc\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"285\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ddd\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"425\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"eee\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"565\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"fff\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"705\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"ggg\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"845\\" y=\\"55\\" class=\\"icon\\">
</image>
<image href=\\"hhh\\" width=\\"90\\" height=\\"130\\" rx=\\"3\\" ry=\\"3\\" x=\\"985\\" y=\\"55\\" class=\\"icon\\">
</image>
</g>
<g class=\\"edgePath\\">
<path fill=\\"none\\" d=\\"M50,50C50,0,190,0,190,50\\" marker-end=\\"url(#svg-marker-arrow-end)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M190,50C190,0,330,0,330,50\\" marker-end=\\"url(#svg-marker-arrow-end)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M330,50C330,0,470,0,470,50\\" marker-end=\\"url(#svg-marker-circle)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M470,218C470,268,610,268,610,218\\" marker-end=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M610,218C610,268,750,268,750,218\\" marker-end=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M800,134C850,134,-50,134,0,134\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M534,134C584,134,496,134,546,134\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M534,134C584,134,-50,134,0,134\\" class=\\"path solid\\">
</path>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<rect rx=\\"3\\" ry=\\"3\\" class=\\"pen\\">
</rect>
<text text-anchor=\\"middle\\" label=\\"aaa\\" x=\\"50\\" y=\\"208\\" class=\\"pen\\">aaa</text>
<text text-anchor=\\"middle\\" label=\\"bbb\\" x=\\"190\\" y=\\"208\\" class=\\"pen\\">bbb</text>
<text text-anchor=\\"middle\\" label=\\"ccc\\" x=\\"330\\" y=\\"208\\" class=\\"pen\\">ccc</text>
<text text-anchor=\\"middle\\" label=\\"ddd\\" x=\\"470\\" y=\\"208\\" class=\\"pen\\">ddd</text>
<text text-anchor=\\"end\\" label=\\"first\\" x=\\"534\\" y=\\"50\\" class=\\"pen\\">first</text>
<text text-anchor=\\"middle\\" label=\\"eee\\" x=\\"610\\" y=\\"208\\" class=\\"pen\\">eee</text>
<text text-anchor=\\"middle\\" label=\\"fff\\" x=\\"750\\" y=\\"208\\" class=\\"pen\\">fff</text>
<text text-anchor=\\"middle\\" label=\\"ggg\\" x=\\"890\\" y=\\"208\\" class=\\"pen\\">ggg</text>
<text text-anchor=\\"middle\\" label=\\"hhh\\" x=\\"1030\\" y=\\"208\\" class=\\"pen\\">hhh</text>
<text text-anchor=\\"end\\" label=\\"second\\" x=\\"1094\\" y=\\"50\\" class=\\"pen\\">second</text>
</g>
<!---->
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/relation_only.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"14 14 118 118\\" style=\\"max-width: 100%; width: 118px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
</g>
<g class=\\"edgePath\\">
</g>
<!---->
</svg>
<div class=\\"errors\\">
<div class=\\"error\\"> aaa--&gt;bbb 要素が未定義です。</div>
<div class=\\"error\\"> bbb--&gt;ccc 要素が未定義です。</div>
<div class=\\"error\\"> ccc--oddd 要素が未定義です。</div>
<div class=\\"error\\"> ddd--xeee 要素が未定義です。</div>
<div class=\\"error\\"> eee--Xfff 要素が未定義です。</div>
<div class=\\"error\\"> fff--aaa 要素が未定義です。</div>
</div>
</article>"
`;
